# healthcart

./: .env.example  .gitignore  add_ssh_key.py  deploy.py  docker-compose.yml  run_on_vps.exp  setup_vps_git.py  upload_to_vps.exp
backend_fastapi/: Dockerfile  pyproject.toml  requirements.txt  seed.py
backend_fastapi/app/: main.py
backend_fastapi/app/api/routers/: admin.py  auth.py  bookings.py  clinics.py  consultations.py  labs.py  notifications.py  payments.py  pharmacies.py  prescriptions.py  vitals.py
backend_fastapi/app/core/: config.py  deps.py  security.py
backend_fastapi/app/models/: schemas.py
backend_fastapi/app/services/: agora_service.py  alert_service.py  fcm_service.py  pdf_service.py  razorpay_service.py  sms_service.py
backend_fastapi/tests/: test_api.py  test_core_flows.py  test_iot_alerts.py  test_services.py
mobile_flutter/: flutter_native_splash.yaml  pubspec.yaml
mobile_flutter/android/app/: build.gradle.kts
mobile_flutter/ios/Runner/: Info.plist
mobile_flutter/ios/Runner.xcodeproj/: project.pbxproj
mobile_flutter/lib/: main.dart
mobile_flutter/lib/core/: router.dart  theme.dart
mobile_flutter/lib/core/services/: api_service.dart  auth_provider.dart  supabase_service.dart
mobile_flutter/test/: login_flow_test.dart  widget_test.dart
nginx/: nginx.conf
supabase/migrations/: 001_schema.sql
web_dashboard/: Dockerfile  package-lock.json  package.json
web_dashboard/src/app/: layout.tsx
web_dashboard/src/app/admin/: layout.tsx  page.tsx
web_dashboard/src/lib/: api.ts  auth-context.tsx
(+33 files in other folders)
